@@ -53,35 +53,40 @@ EMB_PARAMS *font_load(const char *font)
   FcChar8   *fontname = NULL;
   int i;
 
-  FcInit ();
-  pattern = FcNameParse ((const FcChar8 *)font);
-  FcPatternAddInteger (pattern, FC_SPACING, FC_MONO); // guide fc, in case substitution becomes necessary
-  FcConfigSubstitute (0, pattern, FcMatchPattern);
-  FcDefaultSubstitute (pattern);
+  if ( (font[0]=='/')||(font[0]=='.') ) {
+    candidates = NULL;
+    fontname=(FcChar8 *)strdup(font);
+  } else {
+    FcInit ();
+    pattern = FcNameParse ((const FcChar8 *)font);
+    FcPatternAddInteger (pattern, FC_SPACING, FC_MONO); // guide fc, in case substitution becomes necessary
+    FcConfigSubstitute (0, pattern, FcMatchPattern);
+    FcDefaultSubstitute (pattern);
 
-  /* Receive a sorted list of fonts matching our pattern */
-  candidates = FcFontSort (0, pattern, FcTrue, 0, 0);
-  FcPatternDestroy (pattern);
+    /* Receive a sorted list of fonts matching our pattern */
+    candidates = FcFontSort (0, pattern, FcTrue, 0, 0);
+    FcPatternDestroy (pattern);
 
-  /* In the list of fonts returned by FcFontSort()
-     find the first one that is both in TrueType format and monospaced */
-  for (i = 0; i < candidates->nfont; i++) {
-    FcChar8 *fontformat=NULL; // TODO? or just try?
-    int spacing=0; // sane default, as FC_MONO == 100
-    FcPatternGetString  (candidates->fonts[i], FC_FONTFORMAT, 0, &fontformat);
-    FcPatternGetInteger (candidates->fonts[i], FC_SPACING,    0, &spacing);
+    /* In the list of fonts returned by FcFontSort()
+       find the first one that is both in TrueType format and monospaced */
+    for (i = 0; i < candidates->nfont; i++) {
+      FcChar8 *fontformat=NULL; // TODO? or just try?
+      int spacing=0; // sane default, as FC_MONO == 100
+      FcPatternGetString  (candidates->fonts[i], FC_FONTFORMAT, 0, &fontformat);
+      FcPatternGetInteger (candidates->fonts[i], FC_SPACING,    0, &spacing);
 
-    if ( (fontformat)&&(spacing == FC_MONO) ) {
-      if (strcmp((const char *)fontformat, "TrueType") == 0) {
-        fontname = FcPatternFormat (candidates->fonts[i], (const FcChar8 *)"%{file|cescape}/%{index}");
-        break;
-      } else if (strcmp((const char *)fontformat, "CFF") == 0) {
-        fontname = FcPatternFormat (candidates->fonts[i], (const FcChar8 *)"%{file|cescape}"); // TTC only possible with non-cff glyphs!
-        break;
+      if ( (fontformat)&&(spacing == FC_MONO) ) {
+        if (strcmp((const char *)fontformat, "TrueType") == 0) {
+          fontname = FcPatternFormat (candidates->fonts[i], (const FcChar8 *)"%{file|cescape}/%{index}");
+          break;
+        } else if (strcmp((const char *)fontformat, "CFF") == 0) {
+          fontname = FcPatternFormat (candidates->fonts[i], (const FcChar8 *)"%{file|cescape}"); // TTC only possible with non-cff glyphs!
+          break;
+        }
       }
     }
+    FcFontSetDestroy (candidates);
   }
-  FcFontSetDestroy (candidates);
 
   if (!fontname) {
     // TODO: try /usr/share/fonts/*/*/%s.ttf
@@ -90,6 +95,7 @@ EMB_PARAMS *font_load(const char *font)
   }
 
   otf = otf_load((const char *)fontname);
+  free(fontname);
   if (!otf) {
     return NULL;
   }
